<?xml version="1.0"?>
<package format="2">
  <name>dsor_msgs</name>
  <version>1.0.0</version>
  <description>
		Message Package for DSOR Medusas
			
		Institute for Systems and Robotics
		Instituto Superior Tecnico
		Lisbon, Portugal
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <maintainer email="andre.potes@gmail.com">Andre Potes</maintainer>
  <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
  <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
  
  <license>MIT</license>

  <url type="website">http://dsor.isr.ist.utl.pt/</url>
  <url type="repository">https://github.com/dsor-isr.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
