<?xml version="1.0"?>
<package format="2">
    <name>dsor_utils</name>
    <version>1.0.0</version>
    <description>Utilitary library with functions common to multiple projects</description>

    <license>MIT</license>

    <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
    <author email="andre.potes@gmail.com">André Potes</author>
    <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
    <maintainer email="andre.potes@gmail.com">André Potes</maintainer>

    <depend>roscpp</depend>
    <buildtool_depend>catkin</buildtool_depend>
</package>